<resources>
    <string name="app_name">نظام الارشاد و السجل الاكاديمي</string>

    <string name="errorRequired">Required</string>
    <string name="add_User"> اضافة متدرب</string>
    <string name="name">الاسم</string>
    <string name="age">العمر</string>
    <string name="job">العنوان</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="save">حفظ</string>
    <string name="users">اسم المستخدم</string>
    <string name="years_old">تاريخ الميلاد</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main6">Main6Activity</string>


    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="forget_password">Forget password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_customer_create_your_account">New Customer? <font color='#008CFF'>Create Your Account</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="eight_characters">Passwords must be at least 8 characters</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_in_already_a_customer">Sign-in. Already a customer?</string>
    <string name="boldText">Sign-in.</string>
    <string name="normalText">" "Already a customer?</string>
    <string name="enter_at_least_3_characters">Enter at least 3 characters</string>
    <string name="email_required">Email Required</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_required">Password Required</string>
    <string name="password__at_least_8_characters">Password should be at least 8 characters</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_dashboard">لوحة التحكم</string>
    <string name="title_notifications">الاشعارات</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splash">تطبيق المرشد</string>
    <string name="_2020_souq"><![CDATA["    <string name=\"_2020_souq\">2020 Souq by Marwa Eltayeb. All Rights Reserved</string> "]]></string>
    <string name="loading">loading...</string>
    <string name="shashank_singhal">Shashank Singhal</string>
    <string name="title_activity_main_student">MainStudent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_attend_view_student">AttendViewStudent</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>