<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_homeS">

    <fragment
        android:id="@+id/navigation_homeS"
        android:name="com.student.academicadvisingsyst.StudentOp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/profile_teacher" />

    <fragment
        android:id="@+id/navigation_dashboardS"
        android:name="com.student.academicadvisingsyst.StudentOp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_student_details" />

    <fragment
        android:id="@+id/navigation_notification0sS"
        android:name="com.student.academicadvisingsyst.StudentOp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>